test/output/err/ft_compile_vector_rit_arithmetic.cpp.err
In file included from src/vector/rit_arithmetic.cpp:2:
In file included from ./std_header.hpp:17:
In file included from ../containers.hpp:30:
.././iterator/reverse_iterator.hpp:40:94: error: invalid operands to binary expression ('const ft::random_access_iterator<int>' and 'ft::reverse_iterator<ft::random_access_iterator<int> >::difference_type' (aka 'unsigned long'))
        reverse_iterator    operator+(difference_type n) const { return (reverse_iterator(it - n)); }
                                                                                          ~~ ^ ~
src/vector/rit_arithmetic.cpp:20:27: note: in instantiation of member function 'ft::reverse_iterator<ft::random_access_iterator<int> >::operator+' requested here
        std::cout << (it_ == (it + 3).base()) << std::endl;
                                 ^
src/vector/rit_arithmetic.cpp:40:2: note: in instantiation of function template specialization 'test<ft::vector<int, std::allocator<int> > >' requested here
        test<NAMESPACE::vector<int> >();        
        ^
.././iterator/random_access_iterator.hpp:94:9: note: candidate template ignored: could not match 'random_access_iterator<type-parameter-0-1>' against 'unsigned long'
long    operator-(const random_access_iterator<T> & lhs,
        ^
.././iterator/random_access_iterator.hpp:71:43: note: candidate function not viable: 'this' argument has type 'const ft::random_access_iterator<int>', but method is not marked const
            random_access_iterator        operator-(const difference_type & n)
                                          ^
.././iterator/random_access_iterator.hpp:79:31: note: candidate function not viable: no known conversion from 'ft::reverse_iterator<ft::random_access_iterator<int> >::difference_type' (aka 'unsigned long') to 'const ft::random_access_iterator<int>' for 1st argument
           long               operator-(const random_access_iterator & n) const { return (it - n.it); }
                              ^
In file included from src/vector/rit_arithmetic.cpp:2:
In file included from ./std_header.hpp:17:
In file included from ../containers.hpp:30:
.././iterator/reverse_iterator.hpp:39:66: error: invalid operands to binary expression ('const ft::random_access_iterator<int>' and 'int')
        reference           operator*(void) const { return (*(it - 1)); }
                                                              ~~ ^ ~
src/vector/rit_arithmetic.cpp:23:15: note: in instantiation of member function 'ft::reverse_iterator<ft::random_access_iterator<int> >::operator*' requested here
        std::cout << *(it - 3) << std::endl;
                     ^
src/vector/rit_arithmetic.cpp:40:2: note: in instantiation of function template specialization 'test<ft::vector<int, std::allocator<int> > >' requested here
        test<NAMESPACE::vector<int> >();        
        ^
.././iterator/random_access_iterator.hpp:94:9: note: candidate template ignored: could not match 'random_access_iterator<type-parameter-0-1>' against 'int'
long    operator-(const random_access_iterator<T> & lhs,
        ^
.././iterator/random_access_iterator.hpp:71:43: note: candidate function not viable: 'this' argument has type 'const ft::random_access_iterator<int>', but method is not marked const
            random_access_iterator        operator-(const difference_type & n)
                                          ^
.././iterator/random_access_iterator.hpp:79:31: note: candidate function not viable: no known conversion from 'int' to 'const ft::random_access_iterator<int>' for 1st argument
           long               operator-(const random_access_iterator & n) const { return (it - n.it); }
                              ^
In file included from src/vector/rit_arithmetic.cpp:2:
In file included from ./std_header.hpp:17:
In file included from ../containers.hpp:30:
.././iterator/reverse_iterator.hpp:50:68: error: no viable conversion from returned value of type 'ft::random_access_iterator<int>' to function return type 'ft::reverse_iterator<ft::random_access_iterator<int> >'
        reverse_iterator    operator-=(difference_type n) { return (it - n); }
                                                                   ^~~~~~~~
src/vector/rit_arithmetic.cpp:25:5: note: in instantiation of member function 'ft::reverse_iterator<ft::random_access_iterator<int> >::operator-=' requested here
        it -= 3;
           ^
src/vector/rit_arithmetic.cpp:40:2: note: in instantiation of function template specialization 'test<ft::vector<int, std::allocator<int> > >' requested here
        test<NAMESPACE::vector<int> >();        
        ^
.././iterator/reverse_iterator.hpp:19:7: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'ft::random_access_iterator<int>' to 'const ft::reverse_iterator<ft::random_access_iterator<int> > &' for 1st argument
class reverse_iterator
      ^
.././iterator/reverse_iterator.hpp:35:9: note: candidate template ignored: could not match 'reverse_iterator' against 'random_access_iterator'
        reverse_iterator (const reverse_iterator<U> & other) : it(other.base()) {}
        ^
.././iterator/reverse_iterator.hpp:32:18: note: explicit constructor is not a candidate
        explicit reverse_iterator(iterator_type x) : it(x) {}
                 ^
.././iterator/random_access_iterator.hpp:37:13: note: candidate function
            operator random_access_iterator<const T>() const
            ^
3 errors generated.
